# Homebrew-brew

./: README.md  jt-live-whisper.brew
Casks/: caffeine-app.rb  caffeine.rb
Formula/: jt-live-whisper-requirements.txt  jt-live-whisper.rb
Formula/jt-live-whisper/: pyproject.toml
