[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jt-live-whisper-deps"
version = "0.0.0"
description = "Dependency bundle for jt-live-whisper Homebrew formula"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
  "numpy~=2.4",
  "requests~=2.33",
  "tqdm~=4.67",
  "sounddevice~=0.5",
  "soundfile~=0.13",
  "pydub~=0.25",
  "opencc-python-reimplemented~=0.1",
  "fastapi~=0.135",
  "python-multipart~=0.0",
  "uvicorn[standard]~=0.42",
  "websockets~=16.0",
  "huggingface-hub~=1.8",
  "sentencepiece~=0.2",
  "argostranslate~=1.11",
  "faster-whisper~=1.2",
  "ctranslate2~=4.7",
  "orjson~=3.11",
  "pyqt6~=6.10",
  "resemblyzer~=0.1",
  "spectralcluster~=0.2",
]

[project.optional-dependencies]
apple-silicon = [
  "mlx~=0.31",
  "mlx-whisper~=0.4",
  "moonshine-voice~=0.0",
]

[tool.uv]
no-binary-package = [
  "av",
  "orjson",
  "pydantic-core",
  "tiktoken",
  "watchfiles",
]
